--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+This site hosts the documentation for the usage of Elite Observatory and its associated plugins.
