chore: fix images

--- a/pages/notifications.mdx
+++ b/pages/notifications.mdx
@@ -13,12 +13,12 @@ Notifications (whether popups or voice) will trigger simultaneously upon finding
 
 import Image from 'next/image'
 
-![A notification example.](/notification-example.png)
+![A notification example.](../public/notification-example.png)
 *An example notification.*
 
 Popup notifications, as the name suggests, 'pop up' on your screen, overlaying your game (or other windows, if your prefer). This is especially useful on single-monitor machines, where it is not feasible to have Observatory open at the same time as Elite. 
 
-![The dropdown for configuring pop-ups.](/popup-example.png)
+![The dropdown for configuring pop-ups.](../public/popup-example.png)
 *The dropdown menu for configuring pop-ups, found in the Core tab.*
 
 Several configuration options exist for pop-up notifications: 
@@ -37,7 +37,7 @@ Voice notifications use speech synthesis to 'speak' notifications, and can be us
 
 *Note: This is a separate feature to the [Herald](/plugins/herald) plugin.*
 
-![The voice notification configuration dropdown.](voice-example.png)
+![The voice notification configuration dropdown.](../public/voice-example.png)
 *The configuration dropdown for voice notifications, found in the Core tab.*
 
 The Voice Notifications dropdown allows you to select the built-in voice to use. In addition there are sliders for the volume and speed at which the notifications are read, a test button and a button to enable or disable voice notifications entirely.
