--- a/pages/plugins/explorer.mdx
+++ b/pages/plugins/explorer.mdx
@@ -14,7 +14,7 @@ Anything discovered by Explorer can configurably produce [notifications](/notifi
 
 import Image from 'next/image'
 
-![Example output from Explorer.](/explorer-example.png)
+![Example output from Explorer.](../../public/explorer-example.png)
 *Example output from Explorer.*
 
 Explorer divides its output information into subsections:
