--- a/pages/plugins/herald.mdx
+++ b/pages/plugins/herald.mdx
@@ -14,7 +14,7 @@ Herald is a core [plugin](/plugins) for the Observatory, designed to provide clo
 
 import Image from 'next/image'
 
-![The Herald dropdown menu.](/herald-example.png)
+![The Herald dropdown menu.](../../public/herald-example.png)
 *The Herald dropdown menu, found under the Core tab of Observatory.*
 
 Herald has several options to customise:
