--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -22,7 +22,7 @@ Here you'll find documentation for getting the Observatory set up, as well as de
 
 import Image from 'next/image'
 
-![An example of Observatory Core's layout.](observatorycore-example.png)
+![An example of Observatory Core's layout.](../public/observatorycore-example.png)
 *An example of Observatory Core's main page.*
 
 Once Observatory is started, you will see a list of installed plugins on the left. 
