fix: update download links

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -19,8 +19,8 @@ In addition there are a number of bug fixes for edge case error conditions, and 
 ## v0.3.24188.1655 - UI Overhaul
 
 Release versions:
-  * [Installer]()
-  * [Portable]()
+  * [Installer](https://xjph.net/Observatory/0.3.24188.1655/ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/0.3.24188.1655/ObservatoryPortable.zip)
 
 ### July 6, 2024 Bugfixes and Features
 
