chore: reorganisation and new pages

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,13 @@
+---
+title: Elite Observatory Core
+description: Tool for reading/monitoring Elite Dangerous journals for interesting objects.
+---
+
 # Elite Observatory Core 
 
 Tool for reading/monitoring Elite Dangerous journals for interesting objects.
 
-[Download Links](/releases)
+[Download Links](/release)
 
 ## IMPORTANT
 
