--- a/pages/plugins/botanist.mdx
+++ b/pages/plugins/botanist.mdx
@@ -15,7 +15,7 @@ Botanist is a core [plugin](/plugins) for the Observatory, designed to provide s
 
 import Image from 'next/image'
 
-![An example of the Botanist plugin in use.](../../public/botanist-example.png)
+![An example of the Botanist plugin in use.](/botanist-example.png)
 *An example of the Botanist plugin in use.*
 
 Botanist divides its output into subsections: 
