--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -22,7 +22,7 @@ Here you'll find documentation for getting the Observatory set up, as well as de
 
 import Image from 'next/image'
 
-![An example of Observatory Core's layout.](../public/observatorycore-example.png)
+![An example of Observatory Core's layout.](/observatorycore-example.png)
 *An example of Observatory Core's main page.*
 
 Once Observatory is started, you will see a list of installed plugins on the left. 
@@ -63,10 +63,10 @@ A more complete list of currently available plugins can be found [here](/plugins
 
 Below is a list of FAQs for Observatory installation and setup. 
 
-  * ** I can't see/launch Observatory!**
+  * **I can't see/launch Observatory!**
       * Make sure you downloaded ObservatorySetup.exe- by default this should put Observatory in the your application list/Start Menu.
       * If you downloaded ObservatoryCore.zip (the portable version) then you may need to extract and run the application from there.
-  * ** Observatory can't read any of my data!**
+  * **Observatory can't read any of my data!**
       * You may need to set your journal path in the Core section of Observatory. In Windows, this path is usually C:\Users\YOURUSERNAME\Saved Games\Frontier Developments\Elite Dangerous.
       * If you aren't sure where your journal files are, you can search for them in Windows' File Explorer by typing `Journal.*.log` into the search bar. Once you've found the folder your files are in, set Observatory's path to that folder.
       * Test that your journal folder is correct by clicking the Read All button. If you have any historical journal data, then this should now appear in Observatory.
