chore: update prerelease page title

--- a/pages/release/prerelease.mdx
+++ b/pages/release/prerelease.mdx
@@ -1,3 +1,8 @@
+---
+title: Download Elite Observatory Core (Pre-release)
+description: Tool for reading/monitoring Elite Dangerous journals for interesting objects.
+---
+
 ## Pre-release
 
 [Information about the overhaul and what is changing.](/overhaul)
