chore: not a wiki

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -33,7 +33,7 @@ For specifics on what each plugin does, please refer to their respective wiki pa
   * [Botanist](/plugins/botanist)
   * [BioInsights](/plugins/bioinsights)
 
-If you're interested in Custom Criteria for Explorer in particular you can find [the documentation for using them here in the wiki](/plugins/explorer/custom-criteria).
+If you're interested in Custom Criteria for Explorer in particular you can find [the documentation for using them here](/plugins/explorer/custom-criteria).
 
 If you want to chat or collaborate with other users of Observatory you can find us either in the [Elite Dangerous forum thread for Observatory](https://forums.frontier.co.uk/threads/elite-observatory-search-your-journal-for-potentially-interesting-objects-or-notify-you-of-new-ones-on-the-fly-while-exploring.521544/), or on the [Elite Observatory Discord](https://discord.gg/RAFDHsY).
 
