--- a/pages/overhaul.mdx
+++ b/pages/overhaul.mdx
@@ -11,7 +11,7 @@ As ever, it is offered as both an installer, and as a portable version. Notably,
 So what are the big changes?
 
 ### Good-bye Avalonia
-The primary impetus for this overhaul was my own frustration with using Avalonia. Perhaps jumping all the way back to WinForms was an over-correction, but I remain much more comfortable in that environment than anything more "modern" which almost certainly means using models and views with my code one of more layers of separation from my UI. Am I some kind of old weird dinosaur for //not// wanting that separation and preferring all my UI elements to be directly represented by objects in the code? Maybe. But I am what I am.
+The primary impetus for this overhaul was my own frustration with using Avalonia. Perhaps jumping all the way back to WinForms was an over-correction, but I remain much more comfortable in that environment than anything more "modern" which almost certainly means using models and views with my code one of more layers of separation from my UI. Am I some kind of old weird dinosaur for *not* wanting that separation and preferring all my UI elements to be directly represented by objects in the code? Maybe. But I am what I am.
 
 This improved familiarity manifests in a few ways that should be visible to users:
 
