--- a/pages/release/prerelease.mdx
+++ b/pages/release/prerelease.mdx
@@ -18,7 +18,7 @@ Release versions:
 Core
 
   * Update `AudioHandler` to ignore zero-length audio (fixes a silent failure where audio stops working for remainder of session)
-  * Added volume control slider to Core settings, no longer controller per-plugin
+  * Added volume control slider to Core settings, no longer controlled per-plugin
   * Fix crash on exit that was possible if Core tab was never selected during a session
 
 #### July 6, 2024 Bugfixes and Features
