--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,6 +7,15 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest
 
+### v1.0.1 - Multi-screen Bugfix
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1/ObservatoryPortable.zip)
+
+- Fixes an issue where screens were handled incorrectly on multi-display systems causing a potential error when displaying notifications
+- Stop erroneous display of being a "debug build" when certification checking failed
+
 ### v1.0.0 - UI Overhaul
 
 Release versions:
