--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,11 +7,25 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest
 
+### v1.0.2 - Week One Bug Fixes
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.2/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.2/ObservatoryPortable.zip)
+
+Small set of bug fixes for last week's release. Most notably fixes the selected theme not correctly being applied on restart, and allowing custom themes to overwrite older versions of themselves.
+
+* Allow added themes to overwrite existing themes
+* Correctly load previous selected theme on startup
+* Fix startup crash when loading plugins with no UI columns
+* Auto-scroll lists to most recently added item when monitoring
+* Slightly relax requirement for window to be fully on-screen when reloading previous position
+
 ### v1.0.1 - Multi-screen Bugfix
 
 Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1/ObservatoryPortable.zip)
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1.0/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1.0/ObservatoryPortable.zip)
 
 - Fixes an issue where screens were handled incorrectly on multi-display systems causing a potential error when displaying notifications
 - Stop erroneous display of being a "debug build" when certification checking failed
