chore: reorganise pages, update with screenshots of new version

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,18 +9,10 @@ Tool for reading/monitoring Elite Dangerous journals for interesting objects.
 
 [Download Links](/release)
 
-## IMPORTANT
+Please note that Observatory Core is a perpetual work-in-progress. New features are being developed and even the current ones may experience a degree of flux.
 
-Observatory Core is a perpetual work-in-progress. New features are being developed and even the current ones may experience a degree of flux.
-
-Noteworthy planned functionality includes, but is not limited to:
-  * Integration with Frontier's Companion API
-  * Data submission to IGAU
-  * Data submission to EDDN
-  * _And more..._
-
-### How To Use
-Observatory Core differs from the original Elite Observatory in that it is a fully generic reader for the Elite Dangerous journal files, passing those events along to [plugins](/plugins) to do the actual work.
+## What Is It?
+Observatory Core differs from the original Elite Observatory in that it is a fully generic reader for the Elite Dangerous journal files, passing those events along to [plugins](/usage/plugins) to do the actual work.
 
 Observatory will attempt to locate your Elite Dangerous journal location in its default location, though other locations can be specified from the settings in the "Core" application tab by double-clicking the journal path at the bottom.
 
@@ -28,12 +20,14 @@ The "Read All" button will read all journal files in the specified folder, handi
 
 In addition to updating the content of their respective UI tabs, some workers can also send notifications, which will be distributed to all notifier plugins, as well as be passed to Observatory Core's native notification popup.
 
-For specifics on what each plugin does, please refer to their respective wiki pages:
-  * [Explorer](/plugins/explorer)
-  * [Botanist](/plugins/botanist)
-  * [BioInsights](/plugins/bioinsights)
+You can find more specific instructions and details of what all the core settings and buttons do in [the usage guide](/usage).
 
-If you're interested in Custom Criteria for Explorer in particular you can find [the documentation for using them here](/plugins/explorer/customcriteria).
+For specifics on what each plugin does, please refer to their respective wiki pages:
+  * [Explorer](/usage/plugins/explorer)
+  * [Botanist](/usage/plugins/botanist)
+  * [BioInsights](/usage/plugins/bioinsights)
+
+If you're interested in Custom Criteria for Explorer in particular you can find [the documentation for using them here](/usage/plugins/explorer/customcriteria).
 
 If you want to chat or collaborate with other users of Observatory you can find us either in the [Elite Dangerous forum thread for Observatory](https://forums.frontier.co.uk/threads/elite-observatory-search-your-journal-for-potentially-interesting-objects-or-notify-you-of-new-ones-on-the-fly-while-exploring.521544/), or on the [Elite Observatory Discord](https://discord.gg/RAFDHsY).
 
