--- a/pages/usage/plugins/botanist.mdx
+++ b/pages/usage/plugins/botanist.mdx
@@ -1,15 +1,15 @@
 # Botanist
 
-Botanist is a core [plugin](/plugins) for the Observatory, designed to provide simple output for biological signals.
+Botanist is a core [plugin](/usage/plugins) for Observatory, designed to provide simple output for biological signals.
 
-*Note: There is an optional plugin, [BioInsights](/plugins/thirdparty/bioinsights), that expands upon the capabilities of Botanist.*
+*Note: There is an optional plugin, [BioInsights](/usage/plugins/thirdparty/bioinsights), that expands upon the capabilities of Botanist.*
 
 
 ## Installation
 
   * Botanist comes pre-installed with Observatory Core by default.
-  * If manual installation is required, create a 'plugins' folder in the same place as Observatory Core.exe. Add ObservatoryBotanist.dll to this folder.
-  * When starting Observatory, if successful, there should be a Botanist tab on the left.
+  * If manual installation is required, create a 'plugins' folder in the same location as Observatory's executable. Add ObservatoryBotanist.dll to this folder.
+  * When starting Observatory, if successful, there should be a Botanist tab along the top.
 
 ## Usage
 
