--- a/pages/usage/plugins/explorer.mdx
+++ b/pages/usage/plugins/explorer.mdx
@@ -1,14 +1,14 @@
 # Explorer
 
-Explorer is a core [plugin](/plugins) for the Observatory, designed to point out any astronomical points of interest that might be encountered.
+Explorer is a core [plugin](/usage/plugins) for Observatory, designed to point out any astronomical points of interest that might be encountered.
 
-Anything discovered by Explorer can configurably produce [notifications](/notifications).
+Anything discovered by Explorer can configurably produce [notifications](/usage/notifications).
 
 ## Installation
 
   * Explorer comes pre-installed with Observatory Core by default.
-  * If manual installation is required, create a 'plugins' folder in the same place as Observatory Core.exe. Add ObservatoryExplorer.dll to this folder.
-  * When starting Observatory, if successful, there should be an Explorer tab on the left.
+  * If manual installation is required, create a 'plugins' folder in the same location as Observatory's executable. Add ObservatoryExplorer.dll to this folder.
+  * When starting Observatory, if successful, there should be an Explorer tab along the top.
 
 ## Usage
 
@@ -26,7 +26,7 @@ Explorer divides its output information into subsections:
 
 ## Customisation
 
-Explorer features a wide range of customisation capabilities. In addition to its standard configuration (found in the Observatory Explorer dropdown menu in the Core tab), it is possible to specify [custom criteria](/explorer/customcriteria) for Observatory to notify you of.
+Explorer features a wide range of customisation capabilities. In addition to its built-in settings, accessible from the "Plugin Settings" button of the Core tab, it is possible to specify [custom criteria](/explorer/customcriteria) for Observatory to notify you of.
 
 The options available to select in standard Explorer's configuration are usually self-explanatory, but some of the more complex ones are listed below:
 
