--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -5,9 +5,7 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest
-
-### v1.0.2 - Week One Bug Fixes
+## Latest - v1.0.2 - Week One Bug Fixes
 
 Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.2/ObservatorySetup.exe)
