--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -15,29 +15,61 @@ Here you'll find documentation for getting the Observatory set up, as well as de
 
   * Download the latest version from [the releases page](/release).
   * Double-click on the downloaded ObservatorySetup.exe to install.
-    * During setup you will be asked which supplementary [plugins](/plugins) (if any) you would like to install.
+    * During setup you will be asked which supplementary [plugins](/usage/plugins) (if any) you would like to install.
   * Once setup has finished, launch Elite Observatory as you would with any other app.
 
-## Usage
+## Quick Start
+
+Hit "Start Monitor" and start exploring in Elite Dangerous! The out-of-the-box defaults will notify you about a selection of interesting object as you scan with the FSS.
+
+If you'd like to scan through your past discoveries switch to the "Explorer" tab and hit "Read All".
+
+## Detailed Usage
 
 import Image from 'next/image'
 
 ![An example of Observatory Core's layout.](/observatorycore-example.png)
 *An example of Observatory Core's main page.*
 
-Once Observatory is started, you will see a list of installed plugins on the left. 
-  * Navigate to the "Core" tab for further plugin information and settings.
-  * Each other tab corresponds to a plugin, and will have its own information stored there.
-  * You can access additional plugin data and logs by clicking the "Open Plugin Folder" button below the plugin list.
+Once Observatory is started, you will a tab for each installed plugin along the top.
 
-There are four buttons in the bottom corner:
-  * The **Read All** button attempts to read and process all existing journal files, if you have any.
-    * If the Read All button does nothing, your [journal path may be set incorrectly](#troubleshooting).
-  * The **Start Monitor** button will allow Observatory to start monitoring changes to your journal files in real time. Clicking this button again will cease monitoring.
-    * You can set up Observatory to start monitoring automatically by checking the appropriate box in the Core tab.
-  * The **Clear** button will clear all currently displayed data from Observatory.
-  * The **Export** button allows you to export your data to an external file. 
-    * The Export Options dropdown in the Core tab allows you to customise how data is output.
+### Main Window Buttons
+
+![Main Window Buttons](/bottom-buttons.png)
+
+* **Export:** Exports the content of the current plugin tab to a file. The format of this file is *potentially* selectable in the [Core Settings](#core-settings).
+
+* **Clear:** Clears the content of the current plugin tab.
+
+* **Start Monitor / Stop Monitor:** Toggles watching the Elite Dangerous journal files for changes and enabled realtime alerting for in game activity and discoveries.
+
+* **Read All:** Reads all Elite Dangerous journal files and loads all historical events and activity. Some plugins may require this as an initial priming step to populate player information.
+
+### Core Tab
+
+The Core tab is the main location for configuring Observatory and [its plugins](/usage/plugins). 
+
+#### Core Settings
+
+![Core Settings](/core-settings.png)
+
+This block of settings controls the general behaviour of Observatory and functionality not specific to any plugin.
+
+* **Journal Folder:** Shows the location your journal files are currently being read from. Double-clicking the path will allow you to select a new one, but this should be unnecessary in the overwhelming majority of cases.
+
+* **Export Format:** Chooses the format of exported files between tab-separated `.csv` and office open XML `.xlsx` (commonly referred to as excel format). Plugins can override this selection and export in other formats if necessary.
+
+* **Theme:** Select the visual theme for the application. Support for different themes within plugins may vary.
+
+* **Add Theme:** Allows users to add their own custom themes. See [the custom theme documentation](/usage/themes) for details.
+
+* **Volume:** Adjust volume of audible notifications and sounds played by plugins.
+
+* **Audio Device:** Selects the audio output device used for all sounds.
+
+* **Start Monitor On Launch:** Enables realtime monitoring automatically as soon as Observatory is launched.
+
+* **Read All On Launch:** Immediately performs a full read of all journals as soon as Observatory is launched.
 
 ## Plugins
 
@@ -45,31 +77,16 @@ There are many optional plugins available for the Observatory, designed to suppl
 
 By default, three plugins are installed along with Observatory:
 
-  * [Explorer](/plugins/explorer): Finds interesting astronomical features while exploring
-  * [Botanist](/plugins/botanist): Tracks planetary biological signals scanned on foot.
-  * [Herald](/plugins/herald): Enables high-quality cloud-based speech notifications.
+  * [Explorer](/usage/plugins/explorer): Finds interesting astronomical features while exploring
+  * [Botanist](/usage/plugins/botanist): Tracks planetary biological signals scanned on foot.
+  * [Herald](/usage/plugins/herald): Enables high-quality cloud-based speech notifications.
 
 Additional plugins can be downloaded as .eop files and can generally be installed by simply double-clicking the file.
 
-  * [BioInsights](/plugins/thirdparty/bioinsights): Provides in-depth detail on biological signal sources.
-  * [Evaluator](/plugins/thirdparty/evaluator): Provides detailed mapping value information for system bodies.
-  * [SignalMonitor](/plugins/thirdparty/signalmonitor): Detects and provides notifications for certain uncommon signal sources.
-  * [GeoPredictor](/plugins/thirdparty/geopredictor): Tracks and predicts planetary geological signals.
-  * [Telegram](/plugins/thirdparty/telegram): Sends notifications via Telegram messenger.
+  * [BioInsights](/usage/plugins/thirdparty/bioinsights): Provides in-depth detail on biological signal sources.
+  * [Evaluator](/usage/plugins/thirdparty/evaluator): Provides detailed mapping value information for system bodies.
+  * [SignalMonitor](/usage/plugins/thirdparty/signalmonitor): Detects and provides notifications for certain uncommon signal sources.
+  * [GeoPredictor](/usage/plugins/thirdparty/geopredictor): Tracks and predicts planetary geological signals.
+  * [Telegram](/usage/plugins/thirdparty/telegram): Sends notifications via Telegram messenger.
 
-A more complete list of currently available plugins can be found [here](/plugins).
-
-## Troubleshooting
-
-Below is a list of FAQs for Observatory installation and setup. 
-
-  * **I can't see/launch Observatory!**
-      * Make sure you downloaded ObservatorySetup.exe- by default this should put Observatory in the your application list/Start Menu.
-      * If you downloaded ObservatoryCore.zip (the portable version) then you may need to extract and run the application from there.
-  * **Observatory can't read any of my data!**
-      * You may need to set your journal path in the Core section of Observatory. In Windows, this path is usually C:\Users\YOURUSERNAME\Saved Games\Frontier Developments\Elite Dangerous.
-      * If you aren't sure where your journal files are, you can search for them in Windows' File Explorer by typing `Journal.*.log` into the search bar. Once you've found the folder your files are in, set Observatory's path to that folder.
-      * Test that your journal folder is correct by clicking the Read All button. If you have any historical journal data, then this should now appear in Observatory.
-  * **Observatory freezes/crashes when I click 'Read All!'**
-    * For CMDRS with very large amounts of journal files, the Read All button may take a long time to process (up to a few minutes on slower systems). On older versions of Observatory, this will make the application unresponsive until complete.
-
+For more detailed information on plugins and their usage see [the plugin documentation](/usage/plugins).
