chore: portable refresh

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -19,6 +19,10 @@ Another small set of bugfixes for Observatory Core 1.0.
 * Rudimentary handling for display scaling in plugin settings window
   * Hoping to improve the appearance of this window further for *all* users, it's currently pretty awkward
 
+> Note: The portable bundle in this release has been refreshed with a minor post-release bugfix:
+> * Fix handling when loading StringCollection values from the portable config file.
+
+
 ### v1.0.2 - Week One Bug Fixes
 
 Release versions:
