--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -5,7 +5,19 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest - v1.0.3 - Bugfix 3
+## Latest - v1.0.4 - About Bugfixes
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.4/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.4/ObservatoryPortable.zip)
+
+Another small bugfix, and a minor new feature where plugins and the core application can now open an "about" box with details about themselves.
+
+- New "About" boxes for core and plugins
+- Fall back to first audio device when saved audio device selection missing or invalid
+- Fix settings loading issue in portable version
+
+### v1.0.3 - Bugfix 3
 
 Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.3/ObservatorySetup.exe)
