feat: Add documentation pages for fredjk-gh plugins
New pages and images for:

*   Aggregator
*   Archivist (beta)
*   Fleet Commander
*   fredjk-gh AutoUpdater
*   Helm (Beta)
*   Prospector
*   Stat Scanner

Tested with local dev server.

--- a/pages/usage/plugins.mdx
+++ b/pages/usage/plugins.mdx
@@ -43,16 +43,19 @@ Precise installation instructions can be found for any given plugin on its own p
 
 ### Mining
 
-  * Prospector: Mining and hotspot information.
+  * [Prospector](/usage/plugins/thirdparty/prospector): Mining and hotspot information.
 
 ### Notifications
 
-  * Aggregator `(BETA)`: Detailed notification log.
+  * [Aggregator](/usage/plugins/thirdparty/aggregator): Detailed notification log.
   * [Telegram Notifier](/usage/plugins/thirdparty/telegram): Notifications through Telegram.
 
-### Miscellaneous
+### Navigation
 
-  * Archivist `(BETA)`: Journal archive and browser.
-  * Fleet Commander `(BETA)`: Comprehensive fleet carrier information.
-  * Helm `(BETA)`: Various useful routing information.
-  * Stat Scanner: Personal bests and galactic record information.
+  * [Fleet Commander](/usage/plugins/thirdparty/fleetcommander): Comprehensive fleet carrier information and routing tool.
+  * [Helm](/usage/plugins/thirdparty/helm) `(BETA)`: A flight assistant providing heads-up notifications, flight information and statistics.
+
+### Data and Statistics
+
+  * [Archivist](/usage/plugins/thirdparty/archivist) `(BETA)`: Journal archive and browser.
+  * [Stat Scanner](/usage/plugins/thirdparty/statscanner): Personal bests and galactic record information.
